some corrections